# projects_for_cv

CPP_GameOfLife/: funcs.cpp  game_config.txt  game_of_life.cpp  game_of_life.hpp
CPP_containers/src/: AVLtree.h  Makefile  s21_array.h  s21_containers.h  s21_containersplus.h  s21_deque.h  s21_list.h  s21_map.h  s21_multiset.h  s21_queue.h  s21_set.h  s21_stack.h  s21_vector.h  tests.cpp
C_Libraries/Math/: Makefile
C_Libraries/Matrix/: Makefile  s21_matrix.h  tests.c
C_Libraries/Matrix/funcs/: s21_calc_complements.c  s21_create_matrix.c  s21_determinant.c  s21_eq.c  s21_inverse.c  s21_mult.c  s21_remove.c  s21_sub_sum.c  s21_transpose.c
C_Libraries/String/: Makefile  s21_string.c  s21_string.h  tests.c
LinuxMonitoring/src/01/: main.sh
LinuxMonitoring/src/02/: main.sh
LinuxMonitoring/src/03/: main.sh
LinuxMonitoring/src/04/: Makefile  main.c
LinuxMonitoring/src/05/: main.sh
LinuxMonitoring/src/06/: clean_logs.sh  main.sh
PostmanRequests/part1/: part1.postman_collection.json
PostmanRequests/part2/: part2.postman_collection.json
PostmanRequests/part3/: part3.postman_collection.json
QtDatabase/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  dbdata.h  dbdata.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtStopwatch/: CMakeLists.txt  Stopwatch.cpp  Stopwatch.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
